<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_screen_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screen_one" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_screen_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screen_two" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_screen_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screen_three" />

</LinearLayout>