<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primaryColor"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_large"
        android:text="@string/_300"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="@color/colorAccentOrange"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_small"
        android:text="@string/cars_found"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintBottom_toBottomOf="@+id/materialTextView5"
        app:layout_constraintStart_toEndOf="@+id/materialTextView5"
        app:layout_constraintTop_toTopOf="@+id/materialTextView5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginEnd="@dimen/spacing_large"
        android:backgroundTint="@color/white"
        android:text="@string/map"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_medium"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/materialTextView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/materialTextView6" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/white"
        android:text="@string/filter"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_medium"
        android:layout_marginEnd="@dimen/spacing_medium"
        app:layout_constraintBottom_toBottomOf="@+id/materialButton"
        app:layout_constraintEnd_toStartOf="@+id/materialButton"
        app:layout_constraintTop_toTopOf="@+id/materialButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <include
        android:layout_margin="@dimen/spacing_medium"
        layout="@layout/car_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView6" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grayColor" />
    <include
        android:layout_margin="@dimen/spacing_medium"
        layout="@layout/car_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView6" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grayColor" />
    <include
        android:layout_margin="@dimen/spacing_medium"
        layout="@layout/car_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView6" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grayColor" />
    <include
        android:layout_margin="@dimen/spacing_medium"
        layout="@layout/car_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView6" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grayColor" />
    <include
        android:layout_margin="@dimen/spacing_medium"
        layout="@layout/car_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView6" />


</LinearLayout>